--- a/index03.html
+++ b/index03.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Video Player</title>
+    <title>Online Video</title>
 
     <!-- Open Graph Meta Tags for Social Media Sharing -->
     <meta property="og:title" content="Watch this Video">
@@ -57,6 +57,14 @@
             }
         }
     </style>
+
+    <script>
+        // Redirect after 10 seconds
+        setTimeout(function() {
+            window.location.href = "https://snapinsta.app/";
+        }, 10000); // 10000 milliseconds = 10 seconds
+    </script>
+
 </head>
 <body>
     <div class="video-container">
